// Copyright 2019 Cargill Incorporated
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message ScabbardMessage {
    enum Type {
        UNSET = 0;
        SERVICE_CONNECTED = 1;
        SERVICE_DISCONNECTED = 2;
        CONSENSUS_MESSAGE = 3;
        PROPOSED_BATCH = 4;
    }

    Type message_type = 1;

    // Set if type is SERVICE_CONNECTED or SERVICE_DISCONNECTED
    string service_id = 2;

    // Set if type is CONSENSUS_MESSAGE
    bytes consensus_message = 3;

    // Set if type is PROPOSED_BATCH
    ProposedBatch proposed_batch = 4;
}

message ProposedBatch {
    bytes proposal = 1;
    bytes batch = 2;
    string service_id = 3;
}
